k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-container
        image: nginx:latest
        ports:
        - containerPort: 8000
