k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-service
  namespace: dev
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
